[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scene/Effect/AOESplash.gd" type="Script" id=1]
[ext_resource path="res://assets/img/effect/splash/WaterSplash.png" type="Texture" id=2]
[ext_resource path="res://assets/scene/Effect/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "WaterSplash",
"speed": 8.0
} ]

[node name="AOESplash" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "WaterSplash"
frame = 2
playing = true

[node name="StartDelayDamage" type="Timer" parent="."]
one_shot = true

[node name="Lifespan" type="Timer" parent="."]
one_shot = true

[node name="DPS" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="StartDelayDamage" to="." method="_on_StartDelayDamage_timeout"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="timeout" from="DPS" to="." method="_on_DPS_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
